Fix 100vw being too wide with scrollbars

--- a/src/assets/css/tags.css
+++ b/src/assets/css/tags.css
@@ -8,6 +8,7 @@ html {
 body {
   margin: 0 auto;
   width: 500px;
+  overflow-x: hidden;
 }
 
 a {
